ready v1 swagger
