# app/Http/Controllers/Swagger/Api/LoginController.php
@@ -1,7 +1,7 @@
 <?php
 
 
-namespace App\Http\Controllers\Api\Auth\Entry;
+namespace App\Http\Controllers\Swagger\Api;
 
 use App\Http\Controllers\Controller;
 
@@ -13,39 +13,54 @@ use App\Http\Controllers\Controller;
  *      tags={"Login\Registration"},
  *
  *       @OA\RequestBody(
- *          required=true,
  *          @OA\JsonContent(
- *              required={"email_or_password", "password"},
- *              @OA\Property(
- *                 property="email_or_password",
- *                 type="object",
- *                 oneOf={
- *                     @OA\Schema(
- *                         @OA\Property(property="email", type="string", format="email", description="User's email address" example="test@gmail.com")
- *                     ),
- *                     @OA\Schema(
- *                         @OA\Property(property="phone", type="string", description="User's phone number", example="+79200264425", pattern="^\+?[0-9]{1,3}[0-9]{9}$"),
- *                     ),
- *                 }
- *             ),
- *            @OA\Property(property="password", type="string", format="password", description="User's password"),
- *
- *          },
- *
- *          )
+ *              allOf={
+ *                 @OA\Schema(
+ *                     @OA\Property(property="email", type="string", format="email", description="User's email address", example="test@gmail.com"),
+ *                     @OA\Property(property="phone", type="string", description="User's phone number", pattern="^\+?[0-9]{1,3}[0-9]{9}$", example="+79200264425"),
+ *                     @OA\Property(property="password", type="string", format="password", description="User's password", example="Pas123!"),
+ *                 )
+ *              },
+ *          ),
  *      ),
  *
  *      @OA\Response(
  *          response=200,
  *          description="Ok",
  *          @OA\JsonContent(
- *              @OA\JsonContent(
  *              @OA\Property(property="data", ref="#/components/schemas/BearerToken"),
  *              @OA\Property(property="message", type="string", example="Successfully return user"),
- *          )
+ *          ),
+ *      ),
+ *
+ *     @OA\Response(
+ *         response=400,
+ *         description="Нужно указать только email или phone",
+ *         @OA\JsonContent(
+ *             @OA\Property(property="message", type="string", example="Only Email or Phone"),
+ *         ),
+ *     ),
+ *
+ *     @OA\Response(
+ *          response=404,
+ *          description="Ошибка поиска user.",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="message_error", type="string", example="User not found"),
+ *              @OA\Property(property="code", type="integer", example="404"),
+ *          ),
+ *      ),
+ *
+ *      @OA\Response(
+ *          response=500,
+ *          description="Общая ошибка сервера.",
+ *          @OA\JsonContent(
+ *              @OA\Property(property="message_error", type="string", example="Общая ошибка сервера."),
+ *              @OA\Property(property="code", type="integer", example="500"),
+ *          ),
  *      ),
  *
  * ),
+ *
  *
  *
  *
