# storage/api-docs/api-docs.json
@@ -6,6 +6,220 @@
     },
     "paths": {
         "/api/": {},
+        "/api/login": {
+            "post": {
+                "tags": [
+                    "Login\\Registration"
+                ],
+                "summary": "вернуть токен для user по email/phone и password",
+                "operationId": "1caa9601307ce18fbb255c0ce8087556",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "email": {
+                                                "description": "User's email address",
+                                                "type": "string",
+                                                "format": "email",
+                                                "example": "test@gmail.com"
+                                            },
+                                            "phone": {
+                                                "description": "User's phone number",
+                                                "type": "string",
+                                                "pattern": "^\\+?[0-9]{1,3}[0-9]{9}$",
+                                                "example": "+79200264425"
+                                            },
+                                            "password": {
+                                                "description": "User's password",
+                                                "type": "string",
+                                                "format": "password",
+                                                "example": "Pas123!"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/BearerToken"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully return user"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Нужно указать только email или phone",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Only Email or Phone"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Ошибка поиска user.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message_error": {
+                                            "type": "string",
+                                            "example": "User not found"
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": "404"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Общая ошибка сервера.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message_error": {
+                                            "type": "string",
+                                            "example": "Общая ошибка сервера."
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": "500"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/registration": {
+            "post": {
+                "tags": [
+                    "Login\\Registration"
+                ],
+                "summary": "вернуть токен для user по email/phone и password",
+                "operationId": "44b762a00ddcfb7d22e0d23ab41946ef",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "allOf": [
+                                    {
+                                        "properties": {
+                                            "email": {
+                                                "description": "User's email address",
+                                                "type": "string",
+                                                "format": "email",
+                                                "example": "test@gmail.com"
+                                            },
+                                            "phone": {
+                                                "description": "User's phone number",
+                                                "type": "string",
+                                                "pattern": "^\\+?[0-9]{1,3}[0-9]{9}$",
+                                                "example": "+79200264425"
+                                            },
+                                            "password": {
+                                                "description": "User's password",
+                                                "type": "string",
+                                                "format": "password",
+                                                "example": "Pas123!"
+                                            },
+                                            "password_confirmation": {
+                                                "description": "Password confirmation",
+                                                "type": "string",
+                                                "format": "password",
+                                                "example": "Pas123!"
+                                            },
+                                            "agreement": {
+                                                "description": "User's agreement",
+                                                "type": "boolean",
+                                                "format": "password",
+                                                "example": true
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/BearerToken"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Successfully registration"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Общая ошибка сервера.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message_error": {
+                                            "type": "string",
+                                            "example": "Error server"
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": "500"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "tags": [
